--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clean Project</title>
-    <meta name="description" content="A clean, modern project foundation ready for development" />
-    <meta name="author" content="Lovable" />
+    <title>DATA MIGRATOR - Database Analytics Platform</title>
+    <meta name="description" content="Database analytics and migration platform with AI-powered insights" />
+    <meta name="author" content="DATA MIGRATOR" />
 
-    <meta property="og:title" content="Clean Project" />
-    <meta property="og:description" content="A clean, modern project foundation ready for development" />
+    <meta property="og:title" content="DATA MIGRATOR - Database Analytics Platform" />
+    <meta property="og:description" content="Database analytics and migration platform with AI-powered insights" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
@@ -19,6 +20,8 @@
 
   <body>
     <div id="root"></div>
+    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
